--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,7 @@
 title: Superior Flight Training
 email: info@superiorflighttraining.net
 description: > # this means to ignore newlines until "baseurl:"
-  Yet another Jekyll theme. It is designed for business purpose and ported by 
-  Melvin Ch'ng.
+  Whether learning to fly for a career, your business or even just for fun, you can achieve your aviation goals in our state of the art 2022 Cessna 172 Skyhawk!
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
