--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,8 @@ title: Superior Flight Training
 email: info@superiorflighttraining.net
 description: > # this means to ignore newlines until "baseurl:"
   Whether learning to fly for a career, your business or even just for fun, you can achieve your aviation goals in our state of the art 2022 Cessna 172 Skyhawk!
-baseurl: "/jekyll-theme-1" # the subpath of your site, e.g. /blog
-url: "https://brettvh.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://brettvh.github.io/jekyll-theme-1" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Company Information
 company_name: Superior Flight Training
